      persistent. The `_CompileOnAttr`/`__getattribute__()`
      methodology has been removed. The net effect is that
      Column-based mapped class attributes can now be used fully
      at the class level without invoking a mapper compilation
      operation, greatly simplifying typical usage patterns
      within declarative. [ticket:1269]

- schema
    - Index now accepts column-oriented InstrumentedAttributes
      (i.e. column-based mapped class attributes) as column
      arguments. [ticket:1214]

- declarative
    - Can now specify Column objects on subclasses which have no
      table of their own (i.e. use single table inheritance).  
      The columns will be appended to the base table, but only
      mapped by the subclass.

    - For both joined and single inheriting subclasses, the subclass
      will only map those columns which are already mapped on the 
      superclass and those explicit on the subclass.  Other 
      columns that are present on the `Table` will be excluded
      from the mapping by default, which can be disabled
      by passing a blank `exclude_properties` collection to the
      `__mapper_args__`.  This is so that single-inheriting
      classes which define their own columns are the only classes
      to map those columns.   The effect is actually a more organized
      mapping than you'd normally get with explicit `mapper()`
      calls unless you set up the `exclude_properties` arguments
      explicitly.
      
- mysql
    - Added the missing keywords from MySQL 4.1 so they get escaped
      properly.

- mssql
    - Modified the do_begin handling in mssql to use the Cursor not
      the Connection so it is DBAPI compatible.

    - Corrected SAVEPOINT support on adodbapi by changing the
      handling of savepoint_release, which is unsupported on mssql.

0.5.0
========

- new features
- general
    - Documentation has been converted to Sphinx.  In particular,